--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -82,6 +82,9 @@
                                         <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi
                                             Futsal</a>
                                     </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/evenements/sportocampus" style="color: #292c2f;">Sport O' Campus</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
