--- a/presentation.html
+++ b/presentation.html
@@ -85,6 +85,9 @@
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Inscription Tournoi Futsal</a>
                                     </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/evenements/sportocampus" style="color: #292c2f;">Sport O' Campus</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
