--- a/evenements/sportocampus.html
+++ b/evenements/sportocampus.html
@@ -142,7 +142,8 @@
             connaître lors de différentes rencontres sportives. <br>
             Notre objectif étant de redynamiser la vie sportive étudiante. <br>
 
-            Programme : <br>
+            Programme <a href="/img/sportocampus_programme.png"
+            target="_blank" style="color: #292c2f; text-decoration: underline;">(accéder au programme)</a> : <br>
             <br>
             14-16h : Volley 🏐 (libre)<br>
             16h-18h : Basket 🏀 (libre)<br>
