--- a/evenements/sportocampus.html
+++ b/evenements/sportocampus.html
@@ -154,7 +154,8 @@
             <br>
             On vous attend nombreux lors de cet évènement grandiose.<br>
             <br>
-            <u>L'équipe de Cap O'Campus</u>
+            <a href="https://www.instagram.com/capocampus/"
+            target="_blank" style="color: #292c2f; text-decoration: underline;">L'équipe de Cap O'Campus</a>
         </p>
     </main>
 
