--- a/evenements/sportocampus.html
+++ b/evenements/sportocampus.html
@@ -155,7 +155,7 @@
             On vous attend nombreux lors de cet évènement grandiose.<br>
             <br>
             <a href="https://www.instagram.com/capocampus/"
-            target="_blank" style="color: #292c2f; text-decoration: underline;">L'équipe de Cap O'Campus</a>
+            target="_blank" style="color: #292c2f; text-decoration: underline;">L'équipe de Cap O'Campus </i></a>  <i class="fa fa-instagram"></i>
         </p>
     </main>
 
