--- a/admin/index.html
+++ b/admin/index.html
@@ -106,7 +106,7 @@
         </header>
 
         <form action="https://admin.bdsiutsn.fr/login" method="POST" id="loginForm">
-            <label for="password"><b>Mot de passe</b></label>
+            <center><label for="password"><b>Mot de passe</b> 🔒</label></center>
             <input type="password" id="password" name="password">
             <button type="submit">Connexion</button>
         </form>
