--- a/admin/index.html
+++ b/admin/index.html
@@ -78,7 +78,7 @@
         }
         
         form button:hover {
-            background: var(--bg-color);
+            background-color: #0056b3
         }
         
         @keyframes breathe {
