--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Inscription Tournoi Futsal</a>
+                                        <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Tournoi Futsal</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/sportocampus" style="color: #292c2f;">Sport O' Campus</a>
