--- a/evenements/futsal.html
+++ b/evenements/futsal.html
@@ -79,7 +79,7 @@
                                         <a class="dropdown-link" href="/archive/inscription" style="color: #292c2f;">Inscription Championnat</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Inscription Tournoi
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Tournoi
                                             Futsal</a>
                                     </li>
                                     <li role="menuitem">
