--- a/evenements/sportocampus.html
+++ b/evenements/sportocampus.html
@@ -81,7 +81,7 @@
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/futsal"
-                                            style="color: #292c2f;">Inscription Tournoi
+                                            style="color: #292c2f;">Tournoi
                                             Futsal</a>
                                     </li>
                                     <li role="menuitem">
