--- a/presentation.html
+++ b/presentation.html
@@ -12,6 +12,7 @@
     <link href="./table/jquery-ui.js" />
     <link href="./css/footer.css" rel="stylesheet" />
     <link href="./css/css.css" rel="stylesheet" />
+    <link href="./css/presentation.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel=" stylesheet" href="./css/slick.css">
@@ -141,6 +142,17 @@
                 1500 étudiants de l’IUT de Saint-Nazaire ainsi que de dynamiser la vie étudiante de chacun des étudiants
                 de l'IUT.
             </h3>
+        </div>
+
+        <br></br>
+
+        <div class="bds" style="display: flex; justify-content: center;">
+            <figure role="figure" >
+                <img class="bds-img" src="/img/teams/bds.png" alt="Bureau des sports" width="900" height="600" style="border-radius: 15px" />
+                <figcaption style="display: flex; justify-content: center; text-decoration: underline;">
+                   Bureau des sports 2023/2024
+                </figcaption>
+             </figure>
         </div>
 
         <br></br>
