--- a/evenements/handball.html
+++ b/evenements/handball.html
@@ -27,7 +27,7 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Futsal</title>
+    <title>BDS - Handball</title>
     <meta name="description"
         content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
@@ -76,7 +76,8 @@
                                             style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/handball" style="color: #292c2f;">Tournoi Handball</a>
+                                        <a class="dropdown-link" href="/evenements/handball"
+                                            style="color: #292c2f;">Tournoi Handball</a>
                                     </li>
                                 </ul>
                             </div>
@@ -124,21 +125,22 @@
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1200px">
 
         <div class="titles">
-            <h1 style="color:#292c2f;">Inscription Tournoi de Futsal</h3>
+            <h1 style="color:#292c2f;">Inscription Tournoi de Handball</h3>
         </div>
 
         <p class="excerpt mb-0" style="font-size: 1.5em; align-items: center; justify-content: center;">
-            Venez participer au tournoi de futsal organisé par le Bureau des sports de l'IUT de Saint-Nazaire ! Une
+            Venez participer au tournoi de handball organisé par le Bureau des sports de l'IUT de Saint-Nazaire ! Une
             buvette sera disponible tout au long du tournoi.
-            Rendez vous le jeudi 26 octobre 2023 au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic"
+            Rendez vous le jeudi 23 novembre 2023 au <a href="https://maps.app.goo.gl/sVY8sfA8qYFokFTQ9?g_st=ic"
                 target="_blank" style="color: #292c2f; text-decoration: underline;">Gymnase Heinlex</a> à partir de
-            14h30 !
+            18h ! <a href="/img/Tournoi Hand.svg"
+            target="_blank" style="color: #292c2f; text-decoration: underline;">(Voir l'affiche)</a>
             <br></br>
             Attention, le prix du billet est le montant d'inscription d'une équipe et non pas d'un participant !
         </p>
 
         <iframe id="haWidget" allowtransparency="true" scrolling="auto"
-            src="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-futsal/widget"
+            src="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-handball/widget"
             style="width: 100%; height: 700px; border: none;"></iframe>
     </main>
 
