--- a/presentation.html
+++ b/presentation.html
@@ -81,10 +81,7 @@
                                         <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/futsal" style="color: #292c2f;">Tournoi Futsal</a>
-                                    </li>
-                                    <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/sportocampus" style="color: #292c2f;">Sport O' Campus</a>
+                                        <a class="dropdown-link" href="/evenements/handball" style="color: #292c2f;">Tournoi Handball</a>
                                     </li>
                                 </ul>
                             </div>
