--- a/presentation.html
+++ b/presentation.html
@@ -69,7 +69,7 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
-                        <li><a class="nav-link" href="#">Présentation</a></li>
+                        <li><a class="nav-link" href="#">Le Bureau</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
