--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -68,7 +68,7 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
-                        <li><a class="nav-link" href="/presentation">Présentation</a></li>
+                        <li><a class="nav-link" href="/presentation">Le Bureau</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
                                 Événements
