--- a/presentation.html
+++ b/presentation.html
@@ -86,7 +86,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li>
+                        <!--<li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
                                 Classements
@@ -108,7 +108,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </li>
+                        </li>-->
                     </ul>
                 </nav>
             </div>
@@ -171,9 +171,9 @@
             </li>
             <li style="text-indent: 25px;">
                 Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
-                sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
+                sportifs en renforçant le côté compétitif de celui-ci. <!--La rubrique <a class="missions-suaps"
                     href="/classements/equipes" target=”_blank”>Classement</a> sera utilisé pour suivre l’avancée de
-                chaque équipe.
+                chaque équipe.-->
             </li>
         </div>
 
