--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -72,6 +72,7 @@
                                 </ul>
                             </div>
                         </li>
+                        <li><a class="nav-link" href="https://iut-sn.univ-nantes.fr/medias/fichier/planning-activites-physiques-et-sportives_1694176948405-pdf?ID_FICHE=1637662&INLINE=FALSE">Sport à l'IUT</a></li>
                         <!--<li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true" aria-expanded="false" aria-label="discover">
                                 Classements
