--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
                                         <a class="dropdown-link" href="/evenements/evenements"
                                             style="color: #292c2f;">Tous les événements à venir</a>
                                     </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/evenements/volley"
+                                            style="color: #292c2f;">Tournoi Volley</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
