--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -67,7 +67,7 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Tous les événements à venir</a>
+                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Tous nos événements à venir</a>
                                     </li>
                                 </ul>
                             </div>
@@ -113,7 +113,7 @@
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
 
         <div class="titles">
-            <h1 style="color:#292c2f;">Tous les évènements sportifs à venir ! 🎉</h3>
+            <h1 style="color:#292c2f;">Tous nos évènements sportifs à venir ! 🎉</h3>
         </div>
 
         <section class="main-content">
