--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -50,49 +50,54 @@
 </script>
 
 <body>
-    <header style="padding: 0.5rem; margin: 0 auto;" id="nav-menu" aria-label="navigation bar">
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto; " aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
-                <img src="../img/bds-logo-shark.png" class="shark" width="60" height="60" alt="Inc Logo" />
+                <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
-                <nav class="menu">
+                <nav class="menu" style="background-color: #1a202c;">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
                         <li><a class="nav-link" href="/presentation">Le Bureau</a></li>
                         <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true" aria-expanded="false" aria-label="discover">
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover">
                                 Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #292c2f;">Tous nos événements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/evenements"
+                                            style="color: #fff;">Tous les événements à venir</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li><a class="nav-link" href="https://iut-sn.univ-nantes.fr/medias/fichier/planning-activites-physiques-et-sportives_1694176948405-pdf?ID_FICHE=1637662&INLINE=FALSE">Sport à l'IUT</a></li>
+                        
                         <!--<li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true" aria-expanded="false" aria-label="discover">
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover">
                                 Classements
                                 <i class="bx bx-chevron-down" aria-hidden="true"></i>
                             </button>
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/equipes" style="color: #292c2f;">Classement
+                                        <a class="dropdown-link" href="/classements/equipes"
+                                            style="color: #292c2f;">Classement
                                             des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/classements/promotion" style="color: #292c2f;">Classement
+                                        <a class="dropdown-link" href="/classements/promotion"
+                                            style="color: #292c2f;">Classement
                                             des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
-
                         </li>-->
                     </ul>
                 </nav>
@@ -113,7 +118,7 @@
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
 
         <div class="titles">
-            <h1 style="color:#292c2f;">Tous nos évènements sportifs à venir ! 🎉</h3>
+            <h1 style="color:#fff;">Tous nos évènements sportifs à venir ! 🎉</h3>
         </div>
 
         <section class="main-content">
@@ -181,7 +186,7 @@
         <br></br>
 
         <div class="titles">
-            <h1 style="color:#292c2f;">Tous les événements passés ! 🎉</h3>
+            <h1 style="color:#fff;">Tous les événements passés ! 🎉</h3>
         </div>
 
         <section class="main-content">
