--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
 <body>
 
-    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto; " aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
-                <nav class="menu">
+                <nav class="menu" style="background-color: #1a202c;">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="#">Accueil</a></li>
                         <li><a class="nav-link" href="/presentation">Le Bureau</a></li>
@@ -77,7 +77,7 @@
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/evenements"
-                                            style="color: #292c2f;">Tous les événements à venir</a>
+                                            style="color: #fff;">Tous les événements à venir</a>
                                     </li>
                                 </ul>
                             </div>
@@ -505,8 +505,8 @@
 
         <div class="footer-left">
             <a href="/social/site" style="cursor:pointer; text-decoration: none;" target="_blank"><i
-                    class="fa fa-location-arrow" style="text-indent: -20px; color: #292c2f;"></i><b
-                    style="color: #292c2f;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
+                    class="fa fa-location-arrow" style="text-indent: -20px; color: #fff;"></i><b
+                    style="color: #fff;">58 Rue Michel Ange , 44600 Saint-Nazaire</b></a>
         </div>
 
     </footer>
