--- a/presentation.html
+++ b/presentation.html
@@ -60,13 +60,13 @@
 
 <body>
 
-    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto;" aria-label="navigation bar">
+    <header id="nav-menu" style="padding: 0.5rem; margin: 0 auto; " aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/">
                 <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
-                <nav class="menu">
+                <nav class="menu" style="background-color: #1a202c;">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
                         <li><a class="nav-link" href="#">Le Bureau</a></li>
@@ -78,7 +78,8 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #292c2f;">Tous les événements à venir</a>
+                                        <a class="dropdown-link" href="/evenements/evenements"
+                                            style="color: #fff;">Tous les événements à venir</a>
                                     </li>
                                 </ul>
                             </div>
