--- a/presentation.html
+++ b/presentation.html
@@ -30,7 +30,7 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>Bureau des Sports IUT Saint-Nazaire</title>
+    <title>Le Bureau</title>
     <meta name="description"
         content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
     <meta name="keywords"
@@ -84,8 +84,25 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="https://iut-sn.univ-nantes.fr/medias/fichier/planning-activites-physiques-et-sportives_1694176948405-pdf?ID_FICHE=1637662&INLINE=FALSE">Sport à l'IUT</a></li>
-                        
+
+                        <li>
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover">
+                                Sport à l'IUT
+                            </button>
+                            <div id="dropdown1" class="dropdown">
+                                <ul role="menu">
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/sportiut"
+                                            style="color: #fff;">Les sports</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/horaires-sport"
+                                            style="color: #fff;">Horaires d'entraînements</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         <!--<li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
