--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -68,14 +68,30 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements"
-                                            style="color: #fff;">Tous les événements à venir</a>
+                                        <a class="dropdown-link" href="#" style="color: #fff;">Tous
+                                            les événements à venir</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="https://iut-sn.univ-nantes.fr/medias/fichier/planning-activites-physiques-et-sportives_1694176948405-pdf?ID_FICHE=1637662&INLINE=FALSE">Sport à l'IUT</a></li>
-                        
+
+                        <li>
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover">
+                                Sport à l'IUT
+                            </button>
+                            <div id="dropdown2" class="dropdown">
+                                <ul role="menu">
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="#" style="color: #fff;">Les Sports</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/horaires-sport" style="color: #fff;">Horaires
+                                            d'entraînements</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         <!--<li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
